<resources>
    <string name="app_name">DoitTest</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login_register">Login/Register</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="error_title">Error</string>
    <string name="tv_due_to">Due to</string>
    <string name="my_tasks">My Tasks</string>
    <string name="title_activity_task_details">Task Details</string>
    <string name="priority">Priority</string>
    <string name="description">Description</string>
    <string name="notification">Notification</string>
    <string name="ten_minute_before">10 minute before</string>
    <string name="delete_event">Delete event</string>
    <string name="task_id">task_id</string>
    <string name="title">Title</string>
    <string name="priority_menu">Priority</string>
    <string name="name">Name</string>
    <string name="sorted_by">Sorted by</string>
</resources>
