<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_sort"
          android:icon="@drawable/baseline_sort_black_18dp"
          android:orderInCategory="100"
          app:showAsAction="always" android:title="">
        <menu>
            <item android:title="@string/sorted_by"
                  android:enabled="false"
                  android:checkable="false">
            </item>
            <item android:id="@+id/sorted_by_name"
                  android:orderInCategory="100"
                  app:showAsAction="ifRoom"
                  android:icon="@drawable/ic_arrow_upward_black"
                  android:title="@string/name"/>
            <item android:id="@+id/sorted_by_name_reverse"
                  android:orderInCategory="100"
                  app:showAsAction="ifRoom"
                  android:icon="@drawable/ic_arrow_downward"
                  android:title="@string/name"/>

            <item android:id="@+id/sorted_by_priority"
                  android:orderInCategory="100"
                  android:icon="@drawable/ic_arrow_upward_black"
                  app:showAsAction="ifRoom"
                  android:title="@string/priority_menu"/>

            <item android:id="@+id/sorted_by_priority_reverse"
                  android:orderInCategory="100"
                  app:showAsAction="ifRoom"
                  android:icon="@drawable/ic_arrow_downward"
                  android:title="@string/priority_menu"/>
        </menu>
    </item>
    <item android:id="@+id/action_logout"
          android:icon="@drawable/ic_logout_24dp"
          android:orderInCategory="100"
          app:showAsAction="always" android:title=""/>
</menu>