<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authorisation_feature.AuthorisationActivity">

    <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/et_email_auth"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:textSize="14sp"
            android:textStyle="bold" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/progress_author_activ"/>

    <EditText
            android:id="@+id/et_email_auth"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:inputType="textEmailAddress"
            android:hint="@string/e_mail"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/et_password"/>
    <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="10"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:id="@+id/tv_login_register"
            android:text="@string/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/et_password"/>
    <Switch
            android:id="@+id/switch_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/et_password"/>
    <Button
            android:id="@+id/but_login"
            android:text="@string/log_in"
            android:textAllCaps="true"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/switch_login_register"
            app:layout_constraintEnd_toEndOf="@+id/switch_login_register"
            app:layout_constraintStart_toStartOf="@+id/tv_login_register"/>
    <ProgressBar
            android:id="@+id/progress_author_activ"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"
            android:layout_marginStart="8dp"/>

</android.support.constraint.ConstraintLayout>