<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp"
                tools:context=".edit_task_feature.EditTaskActivity">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/title"/>
            <EditText android:id="@+id/et_title"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textStyle="bold"
                      android:minLines="3"
                      android:maxLines="3"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@+id/tv_notif_label"
                    android:background="@color/colorPrimary"
                    android:layout_margin="8dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/priority"/>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <Button
                        android:id="@+id/but_low"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@color/colorPrimary"
                        android:layout_weight="1" android:text="Low"/>
                <Button
                        android:id="@+id/but_normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@color/colorGrey"
                        android:layout_weight="1" android:text="Normal"/>
                <Button
                        android:id="@+id/but_high"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@color/colorGrey"
                        android:layout_weight="1" android:text="High"/>
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/description"/>

            <EditText android:id="@+id/et_descr"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textStyle="bold"
                      android:minLines="3"
                      android:maxLines="3"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@+id/tv_notif_label"
                    android:background="@color/colorPrimary"
                    android:layout_margin="8dp"/>
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">


                <ImageView
                        android:id="@+id/iv_calendar_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_gravity="left"
                        android:src="@drawable/baseline_date_range_black_18dp"/>

                <TextView
                        android:id="@+id/tv_calendare_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"

                        android:layout_gravity="right|center_vertical"
                android:text="Date:----"/>
            </FrameLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@+id/tv_notif_label"
                    android:background="@color/colorPrimary"
                    android:layout_margin="8dp"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/tv_notif_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_below="@+id/view_separator_second"
                        android:layout_alignParentLeft="true"
                        android:text="@string/notification"/>

                <TextView
                        android:id="@+id/tv_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_below="@+id/view_separator_second"
                        android:layout_alignParentRight="true"
                        android:textStyle="bold"
                        android:text="@string/ten_minute_before"/>

            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@+id/tv_notif_label"
                    android:background="@color/colorPrimary"
                    android:layout_margin="8dp"/>

        </LinearLayout>

        <Button
                android:id="@+id/but_delete_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="bottom"
                android:text="@string/delete_event"/>
    </FrameLayout>
</ScrollView>